--- a/frontend/src/components/home-component/locator-component/locator.styles.css
+++ b/frontend/src/components/home-component/locator-component/locator.styles.css
@@ -1,5 +1,6 @@
 .locater-container {
     width: 100%;
+    height: 100%;
     background-color: #0078d4;
     border: 1px solid #e0e0e0;
     border-radius: 8px;
@@ -44,4 +45,9 @@
 .locater-container:focus {
     outline: 2px solid #0078d4;
     outline-offset: 2px;
+}
+
+.locater-wrapper {
+    position: relative;
+    display: inline-block;
 }
