--- a/frontend/src/components/home-component/locator-component/map-component/map.styles.css
+++ b/frontend/src/components/home-component/locator-component/map-component/map.styles.css
@@ -2,3 +2,16 @@
     width: 100%;
     height: 100%;
 }
+
+.map-loading {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.map-container {
+    width: 100%;
+    height: 100%;
+}
