--- a/frontend/src/components/home-component/locator-component/locator-popup-component/locator-popup.styles.css
+++ b/frontend/src/components/home-component/locator-component/locator-popup-component/locator-popup.styles.css
@@ -26,9 +26,10 @@
     background-color: white;
     border-radius: 12px;
     box-shadow: none;
+    top: 3.5%;
     padding: 24px 10px 10px 10px;
     width: 95vw;
-    height: 80vh;
+    height: 90vh;
     max-width: 100vw;
     max-height: 100vh;
     position: relative;
@@ -39,7 +40,6 @@
 
 .map-container {
     flex: 1;
-    margin-top: 20px;
     border-radius: 12px;
     overflow: hidden;
     background-color: #f5f5f5;
@@ -104,7 +104,7 @@
 }
 
 h3 {
-    margin: 0 0 20px 0;
+    margin: 0 0 20px 30px;
     color: #333;
     font-size: 20px;
     font-weight: 600;
