--- a/frontend/src/components/home-component/reminder-component/reminder-set-component/reminder-set.styles.css
+++ b/frontend/src/components/home-component/reminder-component/reminder-set-component/reminder-set.styles.css
@@ -62,7 +62,19 @@
     padding-top: 0.5rem;
 }
 
-.popup-content h3 {
+.popup-content-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.popup-content-header img {
+    width: 30px;
+    height: auto;
+}
+
+.popup-content-header h3 {
     margin: 0;
     color: #333;
     font-size: 1.5rem;
